# ViT_SE_project

./: README.md  finetune.py  finetune_advanced.ipynb  inference.ipynb  pyproject.toml  training.py  training_cpu.ipynb
PoorViTs/: eval.py  finetune.py
PoorViTs/models/: build_model.py
PoorViTs/utils/: mix.py
src/models/: attention.py  layers.py  mhc_mini_vit.py  mini_vit.py
training/: training_log_ep250_bs512_lr0.002_ch96_d9_h12_cls2_20260111_201216.txt
