[project]
name = "vit-se-project"
version = "0.1.0"
description = "Mini-ViT implementation for CIFAR-10"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "tqdm",
    "ipykernel>=7.1.0",
    "timm>=1.0.24",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[tool.uv]
package = false
